# printf

./: .gitignore  CMakeLists.txt  README.md  move.sh  move2.sh  move3.sh
general/: Makefile  author  basic_funcs.c  basic_funcs.h  compile.sh  format_parser.h  ft_printf.c  ft_stdio.h  func_table.h  printf_constatns.h  util.h
general/includes/: additional_funcs.h  additional_print.h  basic_conversion.h  basic_conversion_funcs.h  basic_funcs.h  basic_print.h  bits_util.h  color_settings.h  color_util.h  common_print.h  common_print_funcs.h  convert.h  exp_util.h  fill_flags.h  flags_parse.h  float_convert.h  float_print.h  float_util.h  format_parser.h  format_pecificator_parser.h  ft_float.h  ft_ldtoa.h  ft_print_char.h  ft_printf.h  ft_putwchar.h  func_table.h  generic_table.h  get_digit.h  get_f.h  get_float.h  get_float_part.h  get_hex.h  get_hex_table.h  get_int_part.h  get_oct.h  get_p.h  get_s.h  get_sd.h  get_sd_func_table.h  get_sd_funcs.h  (+46 more)
general/libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_count_digits.c  ft_exit.c  ft_init_arr.c  ft_int_arr_cmp.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isupper.c  ft_itoa.c  ft_itostr.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlen.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memrcpy.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putchar_utf8_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  (+39 more)
general/libft/bits/: print_bits.c
general/libft/ft_convert/: ft_itoa_base.c  ft_lltoa.c  ft_lltoa_base.c  ft_uitoa_base.c  ft_ulltoa_base.c
general/libft/ft_math/: ft_ispsqrt.c  ft_sqrt.c
general/libft/ft_mt/: ft_alloc_sqmt.c  ft_free_mtrx.c  ft_free_sqmt.c  ft_print_sqmt.c
general/libft/ft_print/: ft_putll.c  ft_putll_fd.c
general/libft/includes/: libft.h
general/srcs/: .print_digit_buf.c.swp  additional_funcs.c  additional_print.c  basic_conversion.c  basic_conversion_funcs.c  basic_funcs.c  basic_print.c  bit_util.c  color_settings.c  color_util.c  common_print.c  common_print_funcs.c  exp_util.c  flags_parser.c  float_convert.c  float_print.c  float_util.c  format_parser.c  format_pecificator_parser.c  ft_float.c  ft_ldtoa.c  ft_print_char.c  ft_printf.c  ft_putwchar.c  func_table.c  generic_table.c  get_digit.c  get_f.c  get_float.c  get_float_part.c  get_hex.c  get_hex_table.c  get_int_part.c  get_oct.c  get_p.c  get_s.c  get_sd.c  get_sd_func_table.c  get_sd_funcs.c  get_sd_table.c  (+44 more)
other/: float_usage.c  main_usage.c  va_copy_usage.c
test/: just_percent_test.c  minunit.c  minunit.h  nums_test.c  simple_str_test.c  test_general.c  test_nums.c  test_test.c
test/basic/: basic_test.c  just_percent_test.c  nums_test.c  percent_test.c  return_value.c  simple_str_test.c  test_test.c  wiki_test.c
test/big_d_test/: simple_big_d_test.c
test/bonus/: color_test.c  wchar_test.c  wildcard_test.c
test/buffer_test/: b1_test.c
test/c_tests/: simple_c_test.c
test/d_tests/: checker_d_test.c  ll_d_test.c  norm_d_test.c  short_d_test.c  simple_d_test.c  wh_flag_d_test.c
test/e_tests/: simple_e_test.c
test/f_tests/: mouli_f_test.c  norm_f_test.c  pft_f_test.c  simple_f_test.c
test/g_tests/: simple_g_test.c
test/general/: main_test.c
test/i_tests/: simple_i_test.c
test/libmu/: capture.c  file_work.c  file_work.h  minunit.c  minunit.h
test/manual_test/: manual_usage.c
test/o_tests/: pft_o_test.c  simple_o_test.c
test/p_tests/: simple_p_test.c
test/s_tests/: norm_s_test.c  simple_s_test.c  utf8_test.c
test/u_tests/: simple_u_test.c
test/wrong/: spec_error.c
test/x_tests/: hex_convert_play.c  hex_play.c  norm_x_test.c  pft_x_test.c  simple_x_test.c
